--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,57 @@
+iotivity (0.0.20160513-0~rzr6) wily; urgency=medium
+
+  * publish to ubuntu DISTRIBUTION=wily
+
+ -- Philippe Coval <rzr@gna.org>  Fri, 13 May 2016 20:20:34 -0400
+
+iotivity (0.0.20160513-0~rzr5) wily; urgency=medium
+
+  * publish to ubuntu DISTRIBUTION=wily
+
+ -- Philippe Coval <rzr@gna.org>  Fri, 13 May 2016 20:20:23 -0400
+
+iotivity (0.0.20160513-0~rzr4) wily; urgency=medium
+
+  * publish to ubuntu DISTRIBUTION=wily
+
+ -- Philippe Coval <rzr@gna.org>  Fri, 13 May 2016 20:20:14 -0400
+
+iotivity (0.0.20160513-0~rzr3) wily; urgency=medium
+
+  * publish to ubuntu DISTRIBUTION=wily
+
+ -- Philippe Coval <rzr@gna.org>  Fri, 13 May 2016 20:20:06 -0400
+
+iotivity (0.0.20160513-0~rzr2) wily; urgency=medium
+
+  * publish to ubuntu DISTRIBUTION=wily
+
+ -- Philippe Coval <rzr@gna.org>  Fri, 13 May 2016 20:19:56 -0400
+
+iotivity (0.0.20160513-0~rzr1) wily; urgency=medium
+
+  * publish to ubuntu DISTRIBUTION=wily
+
+ -- Philippe Coval <rzr@gna.org>  Fri, 13 May 2016 20:18:38 -0400
+
+iotivity (0.0.20160513-0~rzr0) unstable; urgency=medium
+
+  * WIP: snapshot
+
+ -- Philippe Coval <rzr@gna.org>  Fri, 13 May 2016 20:18:36 -0400
+
+iotivity (0.0.0-0) unstable; urgency=medium
+
+  * WIP: http://rzr.online.fr/q/snapshot#iotivity
+
+ -- Philippe Coval <rzr@gna.org>  Fri, 13 May 2016 20:18:13 -0400
+
+iotivity (0.0.0-0) UNRELEASED; urgency=medium
+
+  * wip: http://rzr.online.fr/q/snapshot#iotivity
+
+ -- Philippe Coval <rzr@gna.org>  Fri, 13 May 2016 20:18:13 -0400
+
 iotivity (1.0.1-0~rzr3) wily; urgency=medium
 
   * Bump to 1.0.1
